# ohtu-minprojekti

./: .gitignore  .pylintrc  LICENSE  README.md  app.py  kanta.sql  log.html  output.xml  pyproject.toml  report.html  run_robot_tests.sh  testit.db  tietokanta.db
.github/workflows/: main.yml
src/: app.py  db.py  db_functions.py  index.py  routes.py
src/templates/: confirm.html  confirm_video.html  error.html  index.html  list.html  new.html  new_blog.html  new_podcast.html  new_video.html  register.html
src/tests/: test_app.py  test_db_functions.py  test_routes.py
src/tests/robot/: adding.robot  home.robot  list.robot  login.robot  register.robot  resource.robot
