[tool.poetry]
name = "lukuvinkkisovellus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
robotframework = "^4.1.2"
robotframework-seleniumlibrary = "^5.1.3"
pylint = "^2.12.2"
isbnlib = "^3.10.9"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
